--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -1,8 +1,8 @@
-body, html {
+html, body {
     height: 100%;
-    margin: 0;
 }
 body {
+  margin: 0;
   min-height: 100%;
   background-color: #fff;
   color: rgba(0,0,0,0.8);
@@ -15,7 +15,7 @@ body {
   background-color: #f1e7d0;
   color: #433422;
 }
-
 .global{
+  width: 100%;
   height: 100%;
 }
