--- a/assets/styles/navigation.css
+++ b/assets/styles/navigation.css
@@ -1,5 +1,6 @@
 .navigation {
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .navigation-panel{
@@ -14,7 +15,7 @@
 }
 
 .navigation-panel-element{
-    height: 100%;
+    height: 3vh;
     font-size: 16pt;
     line-height: 36px;
     font-weight: 500;
@@ -32,7 +33,7 @@ body {
     background-color: #2B2A30;
     color: #ebf4f1;
   }
-  .sepia-mode body {
-    background-color: #f1e7d0;
+  .second-mode body {
+    background-color: #EFF0F6;
     color: #433422;
   }
