--- a/assets/styles/second.scss
+++ b/assets/styles/second.scss
@@ -19,13 +19,14 @@
     color: black;
     display: flex;
     flex-direction: row;
-    margin: 30px 0 30px 45px;
+    margin: 30px 0 50px 45px;
     border-radius: 0 0 0 20px;
 }
 .to-go-menu{
-    font-weight: 700;
+    font-weight: 1000;
     font-family: "Poppins", sans-serif;
     margin-bottom: 80px;
+    margin-top: 80px;
     font-size: 32px;
 }
 .menu-item-info{
@@ -50,12 +51,12 @@
     font-weight: 700;
     background-color: #6B00F5;
     color: #FFFFFF;
-    font-size: 16px;
+    font-size: 17px;
     border-radius: 15px;
-    padding: 3px 20px 3px 20px;
+    padding: 4px 20px 4px 20px;
     display: flex;
     position: relative;
-    top: 28px;
+    top: 30px;
 }
 .img-check{
     margin-right: 14px;
@@ -64,7 +65,7 @@
     width: 150px;
     height: 150px;
     position: relative;
-    bottom: 40px;
+    bottom: 30px;
     right: 40px;
 }
 .pattens-blue{
@@ -84,4 +85,78 @@
     width: 375px;
     height: 875px;
     background-color: #FFFFFF;
+    color: black;
+}
+.your-card{
+    font-weight: 1000;
+    font-family: "Poppins", sans-serif;
+    margin-bottom: 80px;
+    font-size: 32px;
+    color: black;
+    margin-top: 80px;
+}
+.card-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.card-line{
+    border: none;
+    background-color: #D7D7F9;
+    color: #D7D7F9;
+    height: 6px;
+    width: 85%;
+}
+.sum{
+    font-family: "Poppins", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-right: 20px;
+}
+.sum-layout{
+    display: flex;
+    align-items: flex-end;
+    margin: 10px;
+}
+.sum-container{
+    font-size: 34px;
+    margin-left: 20px;
+}
+.card-item{
+    display: flex;
+}
+.numberOfOrders{
+    font-family: "Poppins", sans-serif;
+    background-color: black;
+    color: white;
+    font-weight: 700;
+    width: 20px;
+    height: 20px;
+    padding: 6px;
+    border-radius: 50%;
+    display: flex;
+
+}
+.card-img{
+    width: 70px;
+    height: 70px;
+}
+.minus-img{
+    background-color: #6B00F5;
+    width: 20px;
+    height: 20px;
+    padding: 6px;
+    border-radius: 50%;
+}
+.plus-img{
+    background-color: #6B00F5;
+    transform: rotate(180deg);
+    width: 20px;
+    height: 20px;
+    padding: 6px;
+    border-radius: 50%;
 }
