--- a/assets/styles/second.scss
+++ b/assets/styles/second.scss
@@ -17,7 +17,6 @@
     font-family: sans-serif;
 }
 .menu-item{
-    width: 100%;
     color: black;
     display: flex;
     flex-direction: row;
@@ -83,6 +82,8 @@
     background-color: #defef0;
 }
 .card{
+
+    overflow: auto;
     border-radius: 25px 0 0 25px;
     width: 375px;
     height: 875px;
@@ -108,8 +109,8 @@
     background-color: #D7D7F9;
     color: #D7D7F9;
     height: 6px;
-    width: 85%;
-    margin-top: 60px;
+    width: 100%;
+    margin-top: -50px;
 }
 .card-line-tamplate{
     border: none;
