--- a/assets/styles/second.scss
+++ b/assets/styles/second.scss
@@ -149,7 +149,7 @@
     display: flex;
     margin-bottom: 40px;
 }
-.numberOfOrders{
+.number-of-orders{
     font-family: "Poppins", sans-serif;
     background-color: black;
     color: white;
