--- a/assets/styles/third.scss
+++ b/assets/styles/third.scss
@@ -1,10 +1,105 @@
 .third{
     width: 100%;
-    height: 100vh;
+    height: 97vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.piano{
+.background-img{
+    position: absolute;
+    z-index: -1;
+}
+ .white{
     display: flex;
+    justify-content: center;
+    align-items: center;
+ }
+.firstWhiteKey{
+    left: 40px;
+    clip-path: polygon(12% 9.5%, 88% 7%, 96% 91%, 31% 91%);
+}
+.secondWhiteKey{
+    left: 40px;
+    clip-path: polygon(0% 13.5%, 86% 8.5%, 97% 93%, 29% 93%);
+}
+.thirdWhiteKey{
+    left: 20px;
+    clip-path: polygon(13% 6%, 94% 8%, 88% 92%, 33% 93%);
+}
+.fourthWhiteKey{
+    left: 17px;
+    clip-path: polygon(13% 11%, 100% 8%, 80% 92.5%, 24% 92.5%);
+}
+.fifthWhiteKey{
+    left: 1px;
+    clip-path: polygon(38% 8%, 100% 8.5%, 94% 92.5%, 3.5% 92.5%);
+}
+.sixthWhiteKey{
+    clip-path: polygon(29% 8%, 80% 8%, 93.5% 90%, 3% 93%);
+}
+.seventhWhiteKey{
+    right:5px;
+    clip-path: polygon(8% 10%, 96% 7%, 72% 91.5%, 17% 91.5%);
+}
+.eighthWhiteKey{
+    right: 10px;
+    clip-path: polygon(10% 7%, 99.5% 7%, 63% 91.5%, 1% 91.5%);
+}
+.ninthWhiteKey{
+    right: 25px;
+    clip-path: polygon(24% 7%, 77.5% 7.2%, 88.5% 89%, 0% 91.5%);
+}
+.tenthWhiteKey{
+    right: 20px;
+    clip-path: polygon(9% 7%, 63% 7%, 80% 94%, 2.5% 92%);
+}
+.eleventhWhiteKey{
+    right: 44px;
+    clip-path: polygon(1% 6.8%, 72% 6.5%, 100% 86.5%, 12% 91%);
+}
+.twelfthWhiteKey{
+    right: 50px;
+    clip-path: polygon(11% 8.5%, 70% 8.5%, 92% 90%, 15% 93%);
+}
+.thirteenthWhiteKey{
+    right: 76px;
+    clip-path: polygon(15% 11%, 100% 9%, 81% 92.7%, 25% 93%);
+}
+.yellow{
+    z-index: -2;
+    position: relative;
+    top: 11px;
+    width: 115px;
+    height: 500px;
+    background-color: white;
+}
+.yellow:hover{
+    background-color: #ffd200;
+}
+
+.black{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.pink{
+    position: relative;
+    bottom: 90px;
+    width: 100px;
+    height: 300px;
+    background-color: green;
+}
+.firstBlackKey{
+    right: 1350px;
+    clip-path: polygon(9% 9%, 81% 8.5%, 87% 92%, 30% 93%);
+}
+.secondBlackKey{
+    z-index: -1;
+    right: 1270px;
+    clip-path: polygon(17% 6.5%, 84.5% 6%, 72.5% 90%, 20% 90%);
+}
+.thirdBlackKey{
+    z-index: -1;
+    right: 1100px;
+    clip-path: polygon(25% 5%, 70% 7%, 55% 91%, 21% 89%);
 }
