--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,12 +1,10 @@
-.test-index {
-    background-color: coral;
+.index {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #E6C894;
     background-size: 100%;
     width: 100%;
-    height: 100%;
+    height: 97vh;
+    font-size: 28px;
 }
-
-.box {
-    width: 200px;
-    height: 200px;
-    background: rgb(77, 167, 92);
-  }
