--- a/assets/styles/navigation.css
+++ b/assets/styles/navigation.css
@@ -3,7 +3,7 @@
   height: 100%;
 }
 
-.navigation-panel{
+.navigationPanel{
     height: 100%;
     width: 100%;
     display: flex;
@@ -14,14 +14,16 @@
     background-color: #aacc5c;
 }
 
-.navigation-panel-element{
+.navigationPanelElement{
     height: 3vh;
     font-size: 16pt;
     line-height: 36px;
     font-weight: 500;
     text-decoration: none;
-    border-radius: 4px;
-    color: black;    
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 body {
@@ -38,5 +40,9 @@ body {
   }
   .third-mode body {
     background-color: #37B2C3;
+    color: #433422;
+  }
+  .fourth-mode body {
+    background-color: #FFFFFF;
     color: #433422;
   }
