--- a/assets/styles/navigation.css
+++ b/assets/styles/navigation.css
@@ -46,3 +46,7 @@ body {
     background-color: #FFFFFF;
     color: #433422;
   }
+  .fifth-mode body {
+    background-color: #F3F3F3;
+    color: #433422;
+  }
