--- a/assets/styles/fifth.css
+++ b/assets/styles/fifth.css
@@ -5,8 +5,8 @@
     justify-content: center;
     align-items: center;
 }
-.content{
-    width: 1000px;
+.fifth_content{
+    width: 600px;
     height: 570px;
     display: flex;
     justify-content: flex-start;
@@ -38,6 +38,17 @@
     border: 0;
     background: transparent;
     margin-bottom: 12px;
+}
+.content-clicked__btn{
+    position: relative;
+    left: 70px;
+    cursor: pointer;
+    color: #C9CDD1;
+    font-size: 14px;
+    border: 0;
+    background: transparent;
+    margin-bottom: 12px;
+    text-decoration: line-through;
 }
 .content__checkbox{
     position: relative;
