--- a/assets/styles/fourth.css
+++ b/assets/styles/fourth.css
@@ -6,7 +6,7 @@
     align-items: center;
     flex-direction: column;
 }
-H1{
+h1{
     margin-bottom: 25px;
     color: #60C1B6;
     font-family: 'Inter', sans-serif;
